--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,21 @@
   font-family: 'comicsans';
   src: url('/fonts/comicsans.ttf');
 }
+
+.win95btn {
+  margin: 2px 2px 2px 0;
+  float: right;
+  background: #c0c0c0;
+  border-width: 1px;
+  border-color: #ffffff #808080 #808080 #ffffff;
+  padding: 10px;
+  font-weight: bold;
+  font-family: Tahoma;
+  text-align: center;
+  color: #000;
+}
+
+.win95btn:hover {
+  background: #a5a4a4;
+  cursor: pointer;
+}
